034 ==> 375350 - Default maintenance window too small on OSX.
035 ==> 374004 - Different Images recognised as identical images.
036 ==> 375704 - Dragging the map over the zoom slider in Marble/OSM view will unintentionally zoom out/in.
037 ==> 375749 - Crash when trying to configure table column.
038 ==> 363937 - Add option to disable thumbnails in Import window.
039 ==> 291110 - BQM Watermark tool : size original/unchanged/pixels/points.
040 ==> 375767 - In Editor switching between pictures with left/right key is reversed. Pic 1 of 80 is displayed as 80 of 80.
041 ==> 375770 - Creating tag from left panel causes error.
042 ==> 375591 - digiKam crash.
043 ==> 375700 - digiKam freezes for a long time (I/O wait) if similarity range is set too low.
044 ==> 375573 - Don't reset/destroy context after deleting one image among a set of duplicates.
045 ==> 374368 - Unchecking "Show splash screen at startup" causes no window to display at launch.
046 ==> 375809 - digiKam froze on opening Settings.
047 ==> 376112 - digiKam Handbook (Menu & F1) Goes To Incorrect Location.
048 ==> 374591 - Deleting image only removes the file and sets the status to hidden but does not delete the image from DB [patch].
049 ==> 323718 - THUMBDB : rebuild all thumbnails does not get rid of all thumbnails first.
050 ==> 317210 - THUMBDB : delete image removes file, but does not remove thumbnails
051 ==> 338869 - BQM Watermark tool : add new option to rotate text.
052 ==> 250642 - BQM Watermark tool : signature does not respect correct orientation.
053 ==> 290944 - BQM Watermark tool : does not support correct placement of watermarks.
054 ==> 374450 - DATA LOSS: Saving a file can overwrite other file.
055 ==> 376345 - Can't disable "auto spell check" while editing metadata.
056 ==> 376369 - No Icon of Digikam in Gnome's panels.
057 ==> 376375 - Strange Map icon.
058 ==> 376351 - create a tool to automatically group jpeg and raw images with same name.
059 ==> 