@@ -53,17 +53,19 @@ UnsharpMaskFilter::UnsharpMaskFilter(QObject* const parent)
     m_radius    = 1;
     m_amount    = 1.0;
     m_threshold = 0.05;
+    m_luma      = false;
 
     initFilter();
 }
 
 UnsharpMaskFilter::UnsharpMaskFilter(DImg* const orgImage, QObject* const parent, double radius,
-                                     double amount, double threshold)
+                                     double amount, double threshold, bool luma)
     : DImgThreadedFilter(orgImage, parent, QLatin1String("UnsharpMask"))
 {
     m_radius    = radius;
     m_amount    = amount;
     m_threshold = threshold;
+    m_luma      = luma;
     initFilter();
 }
 
@@ -74,74 +76,99 @@ UnsharpMaskFilter::~UnsharpMaskFilter()
 
 void UnsharpMaskFilter::unsharpMaskMultithreaded(uint start, uint stop, uint y)
 {
-    long int zero = 0;
-    double   value;
+    long int zero  = 0;
+    double   value = 0.0;
     DColor   p;
     DColor   q;
 
     long int quantum        = m_destImage.sixteenBit() ? 65535 : 255;
     double quantumThreshold = quantum * m_threshold;
+    int hp = 0, sp = 0, lp = 0, hq = 0, sq = 0, lq = 0;
 
     for (uint x = start ; runningFlag() && (x < stop) ; ++x)
     {
         p = m_orgImage.getPixelColor(x, y);
         q = m_destImage.getPixelColor(x, y);
 
-        // Red channel.
-        value = (double)(p.red()) - (double)(q.red());
-
-        if (fabs(2.0 * value) < quantumThreshold)
+        if (m_luma)
         {
-            value = (double)(p.red());
+            p.getHSL(&hp, &sp, &lp);
+            q.getHSL(&hq, &sq, &lq);
+
+            //luma channel
+            value = (double)(lp) - (double)(lq);
+
+            if (fabs(2.0 * value) < quantumThreshold)
+            {
+                value = (double)(lp);
+            }
+            else
+            {
+                value = (double)(lp) + value * m_amount;
+            }
+
+            q.setHSL(hp, sp, CLAMP(lround(value), zero, quantum), m_destImage.sixteenBit());
+            q.setAlpha(p.alpha());
+
         }
         else
         {
-            value = (double)(p.red()) + value * m_amount;
+            // Red channel.
+            value = (double)(p.red()) - (double)(q.red());
+
+            if (fabs(2.0 * value) < quantumThreshold)
+            {
+                value = (double)(p.red());
+            }
+            else
+            {
+                value = (double)(p.red()) + value * m_amount;
+            }
+
+            q.setRed(CLAMP(lround(value), zero, quantum));
+
+            // Green Channel.
+            value = (double)(p.green()) - (double)(q.green());
+
+            if (fabs(2.0 * value) < quantumThreshold)
+            {
+                value = (double)(p.green());
+            }
+            else
+            {
+                value = (double)(p.green()) + value * m_amount;
+            }
+
+            q.setGreen(CLAMP(lround(value), zero, quantum));
+
+            // Blue Channel.
+            value = (double)(p.blue()) - (double)(q.blue());
+
+            if (fabs(2.0 * value) < quantumThreshold)
+            {
+                value = (double)(p.blue());
+            }
+            else
+            {
+                value = (double)(p.blue()) + value * m_amount;
+            }
+
+            q.setBlue(CLAMP(lround(value), zero, quantum));
+
+            // Alpha Channel.
+            value = (double)(p.alpha()) - (double)(q.alpha());
+
+            if (fabs(2.0 * value) < quantumThreshold)
+            {
+                value = (double)(p.alpha());
+            }
+            else
+            {
+                value = (double)(p.alpha()) + value * m_amount;
+            }
+
+            q.setAlpha(CLAMP(lround(value), zero, quantum));
         }
-
-        q.setRed(CLAMP(lround(value), zero, quantum));
-
-        // Green Channel.
-        value = (double)(p.green()) - (double)(q.green());
-
-        if (fabs(2.0 * value) < quantumThreshold)
-        {
-            value = (double)(p.green());
-        }
-        else
-        {
-            value = (double)(p.green()) + value * m_amount;
-        }
-
-        q.setGreen(CLAMP(lround(value), zero, quantum));
-
-        // Blue Channel.
-        value = (double)(p.blue()) - (double)(q.blue());
-
-        if (fabs(2.0 * value) < quantumThreshold)
-        {
-            value = (double)(p.blue());
-        }
-        else
-        {
-            value = (double)(p.blue()) + value * m_amount;
-        }
-
-        q.setBlue(CLAMP(lround(value), zero, quantum));
-
-        // Alpha Channel.
-        value = (double)(p.alpha()) - (double)(q.alpha());
-
-        if (fabs(2.0 * value) < quantumThreshold)
-        {
-            value = (double)(p.alpha());
-        }
-        else
-        {
-            value = (double)(p.alpha()) + value * m_amount;
-        }
-
-        q.setAlpha(CLAMP(lround(value), zero, quantum));
 
         m_destImage.setPixelColor(x, y, q);
     }
@@ -194,6 +221,7 @@ FilterAction UnsharpMaskFilter::filterAction()
     action.addParameter(QLatin1String("amount"),    m_amount);
     action.addParameter(QLatin1String("radius"),    m_radius);
     action.addParameter(QLatin1String("threshold"), m_threshold);
+    action.addParameter(QLatin1String("luma"),      m_luma);
 
     return action;
 }
@@ -203,6 +231,7 @@ void UnsharpMaskFilter::readParameters(const FilterAction& action)
     m_amount    = action.parameter(QLatin1String("amount")).toDouble();
     m_radius    = action.parameter(QLatin1String("radius")).toDouble();
     m_threshold = action.parameter(QLatin1String("threshold")).toDouble();
+    m_luma      = action.parameter(QLatin1String("luma")).toBool();
 }
 
 } // namespace Digikam
