@@ -73,4 +73,6 @@ BUGFIXES FROM BUGZILLA:
 056 ==> 376369 - No Icon of Digikam in Gnome's panels.
 057 ==> 376375 - Strange Map icon.
 058 ==> 376351 - create a tool to automatically group jpeg and raw images with same name.
-059 ==> 
+059 ==> 115753] Option to apply unsharp masking to luma channel only [patch].
+060 ==> 
+
